# KoVidore-benchmark

./: .gitignore  README.md  main.py  pyproject.toml  setup_data.py
assets/: KoVidoreFinOCRRetrieval.csv  KoVidoreMIRRetrieval.csv  KoVidoreOfficeRetrieval.csv  KoVidoreSlideRetrieval.csv  KoVidoreVQARetrieval.csv  ndcg5_summary.csv
data/finocr/: corpus.csv  qrels.csv  queries.csv
data/mir/: corpus.csv  qrels.csv  queries.csv
data/office/: corpus.csv  qrels.csv  queries.csv
data/slide/: corpus.csv  qrels.csv  queries.csv
data/test/: corpus.csv  qrels.csv  queries.csv
data/vqa/: corpus.csv  qrels.csv  queries.csv
kovidore/: __init__.py  evaluate.py  main.py
scripts/: setup_data.py
src/: evaluate.py
