[project]
name = "kovidore-benchmark"
version = "1.0.0"
description = "Korean Vision Document Retrieval Benchmark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mteb>=1.38.54",
    "torch>=2.5.0,<2.8.0",
    "torchvision>=0.20.0",
    "peft>=0.14.0,<0.17.0",
    "einops>=0.8.1",
    "sentencepiece>=0.2.1",
    "protobuf>=6.32.0",
    "colpali-engine>=0.3.7",
    "open-clip-torch>=3.1.0",
    "datasets>=3.6.0",
    "sentence-transformers>=5.1.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "tqdm>=4.0.0",
    "flash-attn>=2.8.3",
]

[tool.setuptools]
packages = ["kovidore"]

[tool.uv]
package = true

[tool.uv.sources]
colpali-engine = { git = "https://github.com/illuin-tech/colpali" }

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[project.scripts]
kovidore = "kovidore.main:main"
